deploy/kubernetes/adapter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adapter
  strategy:
    type: Recreate       # Specify the Recreate strategy
  template:
    metadata:
      labels:
        app: adapter
    spec:
      containers:
        - name: adapter
          image: oktopusp/adapter:latest
          resources:
            requests:
              memory: 64Mi
              cpu: 0.1
            limits:
              memory: 128Mi
              cpu: 0.2
          imagePullPolicy: IfNotPresent
