deploy/kubernetes/mqtt.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt
spec:
  selector:
    app: mqtt
  ports:
    - protocol: TCP
      port: 1883
      targetPort: 1883
      nodePort: 30000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      containers:
        - name: mqtt
          image: rogersacchelli/mqtt:latest
          ports:
            - containerPort: 1883
          resources:
            requests:
              memory: 64Mi
              cpu: 0.1
            limits:
              memory: 128Mi
              cpu: 0.2
          imagePullPolicy: IfNotPresent
