deploy/kubernetes/ws.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-svc
spec:
  selector:
    app: ws
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30005
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws
  template:
    metadata:
      labels:
        app: ws
    spec:
      containers:
        - name: ws
          image: oktopusp/ws:latest
          ports:
            - containerPort: 8080
              #resources:
              #requests:
              #memory: 64Mi
              #cpu: 0.1
              #limits:
              #memory: 256Mi
              #cpu: 0.2
          imagePullPolicy: IfNotPresent
